src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <description>Indicates what further action to take.  Ex. assigning task, creating case, etc.</description>
        <label>Action Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assistant_Manager__c</fullName>
        <label>Assistant Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated__c</fullName>
        <description>If record was created by Integration User then mark checkbox as TRUE.</description>
        <formula>IF(CreatedBy.Id = &quot;005G0000001qcaP&quot;, TRUE, FALSE)</formula>
        <inlineHelpText>Identifies if this record was auto-generated by the system.</inlineHelpText>
        <label>Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Queue__c</fullName>
        <label>Email Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager Biz Starter</fullName>
                </value>
                <value>
                    <fullName>Account Manager EP Starter</fullName>
                </value>
                <value>
                    <fullName>Account Manager TM</fullName>
                </value>
                <value>
                    <fullName>Account Mgmt Manager Call-Back</fullName>
                </value>
                <value>
                    <fullName>ASD-Copyright Correction Letter</fullName>
                </value>
                <value>
                    <fullName>ASD-LegalPlan_Retention</fullName>
                </value>
                <value>
                    <fullName>AZ RA Change</fullName>
                </value>
                <value>
                    <fullName>BAM Real Estate</fullName>
                </value>
                <value>
                    <fullName>BAM Retail</fullName>
                </value>
                <value>
                    <fullName>Biz 501c3</fullName>
                </value>
                <value>
                    <fullName>Biz Advisors Out</fullName>
                </value>
                <value>
                    <fullName>Biz Alt Names</fullName>
                </value>
                <value>
                    <fullName>Biz BCS Enhanced Alerts</fullName>
                </value>
                <value>
                    <fullName>Biz BCS Esc Fax</fullName>
                </value>
                <value>
                    <fullName>Biz BCS Manager Call-Back</fullName>
                </value>
                <value>
                    <fullName>Biz BPS Sellers Permit/State Tax ID</fullName>
                </value>
                <value>
                    <fullName>Biz BSI</fullName>
                </value>
                <value>
                    <fullName>Biz BSI Fax</fullName>
                </value>
                <value>
                    <fullName>Biz BSI Registered Agents</fullName>
                </value>
                <value>
                    <fullName>Biz Escalation</fullName>
                </value>
                <value>
                    <fullName>Biz HA Pre-Filing</fullName>
                </value>
                <value>
                    <fullName>BIZ Ha SOS</fullName>
                </value>
                <value>
                    <fullName>Biz HA Sweeps</fullName>
                </value>
                <value>
                    <fullName>Biz Online Filing Receipts</fullName>
                </value>
                <value>
                    <fullName>Biz QC Approval</fullName>
                </value>
                <value>
                    <fullName>BIZ RA SOP</fullName>
                </value>
                <value>
                    <fullName>Biz Shipping</fullName>
                </value>
                <value>
                    <fullName>Biz Special Filings</fullName>
                </value>
                <value>
                    <fullName>Casey Hoffman</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unique Queue</fullName>
                </value>
                <value>
                    <fullName>Unique Outbound</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Outbound Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Updated by Customer</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine if the activity is used for commission matching related to an opportunity or lead with an order</description>
        <label>Commission Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No-VM</fullName>
                </value>
                <value>
                    <fullName>No-NM</fullName>
                </value>
                <value>
                    <fullName>No-Email</fullName>
                </value>
                <value>
                    <fullName>No-Final</fullName>
                </value>
                <value>
                    <fullName>Yes-SNE</fullName>
                </value>
                <value>
                    <fullName>Yes-Talk</fullName>
                </value>
                <value>
                    <fullName>Contacted/Spoke - Commission Eligible</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 1</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 2</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 3</fullName>
                </value>
                <value>
                    <fullName>NM Attempt 4</fullName>
                </value>
                <value>
                    <fullName>VM Final Attempt</fullName>
                </value>
                <value>
                    <fullName>Contacted/Spoke - Ineligible</fullName>
                </value>
                <value>
                    <fullName>Call Transferred</fullName>
                </value>
                <value>
                    <fullName>Service Unavailable</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicated if the agent contacted the customer.</description>
        <label>Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_did_NOT_Object__c</fullName>
        <label>Customer did NOT Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Call_End__c</fullName>
        <label>Date/Time Call End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Call_Start__c</fullName>
        <label>Date/Time Call Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Customer_Verification__c</fullName>
        <label>Date/Time  Customer Verification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Inbound_Email__c</fullName>
        <description>Date/time of Last Inbound Email</description>
        <label>Date/Time Last Inbound Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Queue_Assigned__c</fullName>
        <description>Value of Date/Time Last Queue was assigned when activity was logged(mainly for email)</description>
        <label>Date/Time  Last Queue Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Datetime_Created_External_System__c</fullName>
        <label>Date/Time Created External System</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Lead_Status__c</fullName>
        <label>PRT Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active (Contacted)</fullName>
                </value>
                <value>
                    <fullName>Attempted (No Contact)</fullName>
                </value>
                <value>
                    <fullName>Pending-Vindicia</fullName>
                </value>
                <value>
                    <fullName>Closed-Vindicia</fullName>
                </value>
                <value>
                    <fullName>Closed (Lost)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Action__c</fullName>
        <label>Email Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reply</fullName>
                </value>
                <value>
                    <fullName>Forward</fullName>
                </value>
                <value>
                    <fullName>Resend</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Compose Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Responded_Time__c</fullName>
        <label>Date/Time Email Responded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Template_Description__c</fullName>
        <label>Email Template Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Developer_Name__c</fullName>
        <label>Email Template Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Folder_ID__c</fullName>
        <label>Email Template Folder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Folder_Name__c</fullName>
        <label>Email Template Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <label>Email Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <description>Store Email Template Name</description>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>External System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Outbound__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Customer_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Customer Verified?</description>
        <label>Is Customer Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Decline_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Decline Activity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Subscription_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a Subscription Save Call?</description>
        <label>Is Subscription Activity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Campaign__c</fullName>
        <label>Last Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress (Assigned)</fullName>
                </value>
                <value>
                    <fullName>Qualified (Interested)</fullName>
                </value>
                <value>
                    <fullName>Closed Lost - No Interest</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost - No Activity</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost - Bad Info</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>VM - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact/Bad Number/NM</fullName>
                </value>
                <value>
                    <fullName>Already Purchased</fullName>
                </value>
                <value>
                    <fullName>Response/Research Pending</fullName>
                </value>
                <value>
                    <fullName>Do Not Call</fullName>
                </value>
                <value>
                    <fullName>NM - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>NM - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>VM - Final Attempt</fullName>
                </value>
                <value>
                    <fullName>Transaction Complete</fullName>
                </value>
                <value>
                    <fullName>Soft SNE</fullName>
                </value>
                <value>
                    <fullName>Hard SNE</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Supervisor__c</fullName>
        <label>Lead Supervisor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CC_Email__c</fullName>
        <label>Legacy CC Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked for Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes_In_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minutes In Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Not_Sales__c</fullName>
        <description>Free text field for capturing data about calls that sales receives that are not sales calls, but are not transferred somewhere else.</description>
        <label>Other - Not Sales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRT_Contact_Status__c</fullName>
        <label>PRT Contact Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Reviewed</fullName>
                </value>
                <value>
                    <fullName>Email Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Email Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Email Receipt 1</fullName>
                </value>
                <value>
                    <fullName>Phone Conversation 1</fullName>
                </value>
                <value>
                    <fullName>Phone Conversation 2</fullName>
                </value>
                <value>
                    <fullName>Ran Card</fullName>
                </value>
                <value>
                    <fullName>Ran Card 2</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 1</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 2</fullName>
                </value>
                <value>
                    <fullName>VM Attempt 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Over_the_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay Over the Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pilot_Group_Contact__c</fullName>
        <label>Contact (Pilot Group Use Only)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call 1 - Contacted</fullName>
                </value>
                <value>
                    <fullName>Call 1 - VM / Email</fullName>
                </value>
                <value>
                    <fullName>Call 1 - No Answer / Email</fullName>
                </value>
                <value>
                    <fullName>Call 2 - Contacted</fullName>
                </value>
                <value>
                    <fullName>Call 2 - Not Contacted</fullName>
                </value>
                <value>
                    <fullName>SNE - Contacted</fullName>
                </value>
                <value>
                    <fullName>SNE - No Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Order_Resolution__c</fullName>
        <label>Problem Order Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unresolved – Initial Email Sent</fullName>
                </value>
                <value>
                    <fullName>Unresolved – 2nd Email Sent</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Customer did not have the needed information</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Call attempted and customer not reached (disconnected/VM)</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Email Sent &amp; Response Pending</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Customer Submitting Revision</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Internal LZ research required</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Other</fullName>
                </value>
                <value>
                    <fullName>Unresolved – Auto Closed</fullName>
                </value>
                <value>
                    <fullName>Resolved – Revision Placed on LZ.com</fullName>
                </value>
                <value>
                    <fullName>Resolved – New Information Provided</fullName>
                </value>
                <value>
                    <fullName>Resolved – Customer Wants to Proceed “As Is”</fullName>
                </value>
                <value>
                    <fullName>Resolved – Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Resolved – Not a Problem</fullName>
                </value>
                <value>
                    <fullName>Resolved – Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>RA Renewal</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Biz Starter</fullName>
                </value>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>Pilot Group</fullName>
                </value>
                <value>
                    <fullName>PostUp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Contact__c</fullName>
        <label>Reason For Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Inquiry</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>EIN Inquiry</fullName>
                </value>
                <value>
                    <fullName>General Service Inquiry</fullName>
                </value>
                <value>
                    <fullName>Make Revisions/Updates to Order</fullName>
                </value>
                <value>
                    <fullName>Problem Status Inquiry</fullName>
                </value>
                <value>
                    <fullName>Requesting Documents</fullName>
                </value>
                <value>
                    <fullName>Submitting Materials</fullName>
                </value>
                <value>
                    <fullName>Subscription Assistance</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Change Package/Upgrade/Downgrade</fullName>
                </value>
                <value>
                    <fullName>Order in Problem Status</fullName>
                </value>
                <value>
                    <fullName>Update Order</fullName>
                </value>
                <value>
                    <fullName>Status Inquiry</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Inquiries</fullName>
                </value>
                <value>
                    <fullName>Product/Service Overview</fullName>
                </value>
                <value>
                    <fullName>Pricing Questions/Quotes</fullName>
                </value>
                <value>
                    <fullName>Transfer to Customer Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Transfer__c</fullName>
        <label>Reason For Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Contact__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Sales Inquiry</fullName>
                </value>
                <value>
                    <fullName>G&amp;S Team Inquiry</fullName>
                </value>
                <value>
                    <fullName>SET Team Inquiry</fullName>
                </value>
                <value>
                    <fullName>Cancel Subscription</fullName>
                </value>
                <value>
                    <fullName>501c3</fullName>
                </value>
                <value>
                    <fullName>VIP/Escalation</fullName>
                </value>
                <value>
                    <fullName>Mock Launch Request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proofer</fullName>
                </value>
                <value>
                    <fullName>FileNet</fullName>
                </value>
                <value>
                    <fullName>Call Log</fullName>
                </value>
                <value>
                    <fullName>Order Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Order_Decline_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Order Decline Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Reasons__c</fullName>
        <label>Status Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>Updated by Customer</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Assigned for Resolution</fullName>
                </value>
                <value>
                    <fullName>Issue Resolved</fullName>
                </value>
                <value>
                    <fullName>Order Cancelled</fullName>
                </value>
                <value>
                    <fullName>Customer Proceeding As Is</fullName>
                </value>
                <value>
                    <fullName>Customer-Requested Item Complete</fullName>
                </value>
                <value>
                    <fullName>Auto Closed (Timeout)</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>LZM</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Escalated Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Not_Sales__c</fullName>
        <description>For capturing data on calls that sales receives but transfers elsewhere without creating a lead or opportunity.</description>
        <label>Transfer - Not Sales</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BIZ Sales</fullName>
                </value>
                <value>
                    <fullName>PSD Sales</fullName>
                </value>
                <value>
                    <fullName>IP Sales</fullName>
                </value>
                <value>
                    <fullName>OB Sales</fullName>
                </value>
                <value>
                    <fullName>General CC</fullName>
                </value>
                <value>
                    <fullName>BIZ CC</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>PSD CC</fullName>
                </value>
                <value>
                    <fullName>IP CC</fullName>
                </value>
                <value>
                    <fullName>AS CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Processing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_ID_First_3_Digits__c</fullName>
        <formula>LEFT(WhoId,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who ID First 3 Digits</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>My Scheduled Next Events</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>